2002-05-21  Sven Wischnowsky  <wischnow@zsh.org>

	* 17194: Src/Zle/computil.c: improve calculation of used
	columns for match-max-length

	* 17193: Completion/Unix/Command/_init_d: let _init_d use a
	pre-pattern

	* 17192: Src/Zle/compcore.c: fix for completion in nested
	quotes where the sub-word ends in a backslash

	* 17191: Completion/Base/Utility/_arguments,
	Completion/Unix/Command/_rsync: fix removal of automatically
	added specs (from the -- option) for which a user-defined one
	is present

	* 17190: Src/Zle/computil.c: avoid printing in the last screen
	column when preparing a completion listing with compdescribe

	* 17189: Completion/Unix/Type/_path_files: better splitting of
	-g-strings; this failed when patterns contained spaces

2002-05-20  Felix Rosencrantz <f_rosencrantz@yahoo.com>

	* 17021: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_valgrind: Function for Julian Seward's
	memory checking tool.

2002-05-20  Felix Rosencrantz <f_rosencrantz@yahoo.com>

	* 16836: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_larch: Function for Tom Lord's arch
	SCM tool.  This function was mentioned in the specified post.  
	It still has many problems, but seems to be the fullest larch
	completion function so far.  Added at Adam's request.

2002-05-17  Peter Stephenson  <pws@csr.com>

	* 17175: Src/math.c: didn't handle parameters before a ternary
	expression properly.

2002-05-16  Peter Stephenson  <pws@csr.com>

	* 17171: Src/Modules/tcp.c: ztcp didn't return status 1 when a
	connect() failed.

2002-05-15  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 17166: Src/Modules/zftp.c: must check fileno of zftp control
	connection before it's closed.

2002-05-15  Sven Wischnowsky  <wischnow@zsh.org>

	* 17163: Src/Zle/compcore.c: follow-up to 17135,
	backslash-quoted backslashes in double quotes weren't right,
	yet

2002-05-14  Peter Stephenson  <pws@csr.com>

	* 17162: Src/Modules/tcp.c: prevent warning on gethostbyaddr()